--- a/singlepop.ipynb
+++ b/singlepop.ipynb
@@ -11,14 +11,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2.1\n"
+      "hello world\n"
      ]
     }
    ],
    "source": [
-    "import dipde\n",
+    "print 'hello world'\n",
+    "#import dipde\n",
     "\n",
-    "print dipde.__version__"
+    "#print dipde.__version__"
    ]
   },
   {
